--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     <footer id="contact">
         <div class="container">
             <p>&copy; 2024 Aetherapp Ventures. All rights reserved.</p>
-            <p>Contact: info@aetherapp.com</p>
+            <p>Contact: cayden2138@icloud.com</p>
         </div>
     </footer>
 
