--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                     </div>
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 transform hover:scale-105 transition-transform">
                         <i class="fas fa-brain text-4xl text-primary mb-4"></i>
-                        <h3 class="text-xl font-semibold mb-2">AI Command Suggestions</h3>
-                        <p class="mb-4">Our AI is so smart, it finishes your comma- ...nds before you do!</p>
+                        <h3 class="text-xl font-semibold mb-2">Integration with Windows</h3>
+                        <p class="mb-4">Our Terminal is, if executed, integrated into the Default Windows CMD Application.</p>
                         <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
                             <div class="bg-primary h-2.5 rounded-full progress-bar" style="width: 0%" data-width="85%"></div>
                         </div>
@@ -237,11 +237,11 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Aether Terminal by the Numbers</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
                     <div>
-                        <div class="text-4xl font-bold mb-2"><span class="stat-counter" data-target="1000000">0</span>+</div>
+                        <div class="text-4xl font-bold mb-2"><span class="stat-counter" data-target="117">0</span>+</div>
                         <div class="text-xl">Happy Users</div>
                     </div>
                     <div>
-                        <div class="text-4xl font-bold mb-2"><span class="stat-counter" data-target="5000">0</span>+</div>
+                        <div class="text-4xl font-bold mb-2"><span class="stat-counter" data-target="20">0</span>+</div>
                         <div class="text-xl">Custom Themes</div>
                     </div>
                     <div>
