--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
         <div class="container mx-auto px-6 text-center">
             <p>&copy; 2024 Aetherapp Ventures. All rights reserved.</p>
             <p>Powered by caffeine, coding, and a sprinkle of magic.</p>
+            <p><li><a href="editor.html" class="hover:text-secondary transition-colors">Web Editor</a></li></p>
         </div>
     </footer>
 
