--- a/index.html
+++ b/index.html
@@ -478,10 +478,10 @@
                             <i class="fas fa-download"></i>
                             <span>Download for Windows</span>
                         </a>
-                        <a href="#features" 
+                        <a href="docu.html" 
                            class="bg-white/10 backdrop-blur-sm text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-white/20 transition-all flex items-center justify-center space-x-2">
-                            <i class="fas fa-play"></i>
-                            <span>Learn More</span>
+                            <i class="fas fa-book"></i>
+                            <span>Documentation</span>
                         </a>
                     </div>
                     <div class="text-sm text-white/60">
@@ -1436,6 +1436,7 @@
         }, 1000);
 
         document.addEventListener('DOMContentLoaded', () => {
+
             const docNavItems = document.querySelectorAll('.doc-nav-item');
             const docSections = document.querySelectorAll('.doc-section');
 
