--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         The Next-Gen Terminal Experience
                     </h1>
                     <p class="text-xl md:text-2xl mb-12 text-white/90">
-                        Transform your command line experience with AI-powered features, stunning visuals, and unmatched productivity tools.
+                        Transform your command line experience with stunning visuals and unmatched productivity tools.
                     </p>
                     <div class="flex flex-col sm:flex-row justify-center gap-4 mb-12">
                         <a href="/downloads/aether_terminal.exe" download 
@@ -405,11 +405,11 @@
                             </div>
                             <div class="typing-effect-delay-1">
                                 <span class="text-green-400">λ</span>
-                                <span class="text-white/90">AI Assistant enabled</span>
+                                <span class="text-white/90">Terminal ready</span>
                             </div>
                             <div class="typing-effect-delay-2">
                                 <span class="text-green-400">λ</span>
-                                <span class="text-blue-400">How can I help you today?</span>
+                                <span class="text-blue-400">Type 'help' to get started</span>
                             </div>
                         </div>
                     </div>
