--- a/docu.html
+++ b/docu.html
@@ -11,21 +11,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.7/marked.min.js"></script>
     <style>
         :root {
-            --primary-color: #4a5568;
-            --text-color: #2d3748;
+            --primary-color: #3b82f6;
+            --text-color: #1f2937;
             --bg-color: #ffffff;
-            --nav-bg: #f7fafc;
-            --link-color: #4299e1;
-            --border-color: #e2e8f0;
+            --nav-bg: #f8fafc;
+            --link-color: #2563eb;
+            --border-color: #e5e7eb;
+            --sidebar-bg: #f8fafc;
+            --code-bg: #1e293b;
+            --hover-bg: #f1f5f9;
         }
 
         body.dark {
-            --primary-color: #a0aec0;
-            --text-color: #f7fafc;
-            --bg-color: #1a202c;
-            --nav-bg: #2d3748;
-            --link-color: #63b3ed;
-            --border-color: #4a5568;
+            --primary-color: #60a5fa;
+            --text-color: #f3f4f6;
+            --bg-color: #0f172a;
+            --nav-bg: #1e293b;
+            --link-color: #93c5fd;
+            --border-color: #334155;
+            --sidebar-bg: #1e293b;
+            --code-bg: #0f172a;
+            --hover-bg: #1e293b;
         }
 
         body {
@@ -35,17 +41,23 @@
             line-height: 1.6;
             color: var(--text-color);
             background: var(--bg-color);
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        * {
+            transition: background-color 0.3s, border-color 0.3s, color 0.3s;
         }
 
         /* Header styles */
         header {
             background: var(--nav-bg);
             border-bottom: 1px solid var(--border-color);
-            padding: 1rem;
+            padding: 0.75rem;
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 1000;
+            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
         }
 
         .header-content {
@@ -54,9 +66,9 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 0 1rem;
         }
 
-        /* Main layout */
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -66,21 +78,25 @@
             gap: 40px;
         }
 
-        /* Navigation styles */
         .doc-nav {
             position: sticky;
             top: 80px;
             height: calc(100vh - 100px);
             overflow-y: auto;
             padding-right: 20px;
+            background: var(--sidebar-bg);
+            padding: 1.5rem;
+            border-radius: 12px;
+            border: 1px solid var(--border-color);
         }
 
         .doc-nav h5 {
             font-size: 0.875rem;
             text-transform: uppercase;
             letter-spacing: 0.05em;
-            margin: 1.5rem 0 0.5rem;
+            margin: 1.5rem 0 1rem;
             color: var(--primary-color);
+            font-weight: 600;
         }
 
         .doc-nav ul {
@@ -94,40 +110,57 @@
         }
 
         .doc-nav a {
-            color: var(--primary-color);
+            color: var(--text-color);
             text-decoration: none;
-            font-size: 0.9rem;
+            font-size: 0.95rem;
             display: block;
-            padding: 0.3rem 0;
+            padding: 0.5rem 0.75rem;
+            border-radius: 6px;
+            transition: all 0.2s;
         }
 
         .doc-nav a:hover {
-            color: var(--link-color);
+            background: var(--hover-bg);
+            color: var(--primary-color);
+        }
+
+        .doc-nav a.active {
+            background: var(--hover-bg);
+            color: var(--primary-color);
+            font-weight: 500;
         }
 
         /* Markdown content styles */
         .markdown-body {
             max-width: 800px;
             margin: 0 auto;
+            background: var(--bg-color);
+            padding: 2rem;
+            border-radius: 12px;
+            border: 1px solid var(--border-color);
+            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
         }
 
         .markdown-body h1 {
             font-size: 2.5rem;
             margin-bottom: 2rem;
-            padding-bottom: 0.5rem;
+            padding-bottom: 1rem;
             border-bottom: 2px solid var(--border-color);
+            color: var(--primary-color);
         }
 
         .markdown-body h2 {
             font-size: 1.75rem;
             margin: 2rem 0 1rem;
-            padding-bottom: 0.3rem;
+            padding-bottom: 0.5rem;
             border-bottom: 1px solid var(--border-color);
+            color: var(--text-color);
         }
 
         .markdown-body h3 {
             font-size: 1.25rem;
             margin: 1.5rem 0 1rem;
+            color: var(--text-color);
         }
 
         .markdown-body p {
@@ -144,17 +177,19 @@
         }
 
         .markdown-body code {
-            background: var(--nav-bg);
+            background: var(--code-bg);
+            color: #e5e7eb;
             padding: 0.2rem 0.4rem;
-            border-radius: 3px;
+            border-radius: 4px;
             font-size: 0.9em;
         }
 
         .markdown-body pre {
-            background: #1a1a1a;
-            padding: 1rem;
-            border-radius: 5px;
+            background: var(--code-bg);
+            padding: 1.25rem;
+            border-radius: 8px;
             overflow-x: auto;
+            border: 1px solid var(--border-color);
         }
 
         .markdown-body pre code {
@@ -172,6 +207,10 @@
             position: sticky;
             top: 80px;
             font-size: 0.9rem;
+            background: var(--sidebar-bg);
+            padding: 1.5rem;
+            border-radius: 12px;
+            border: 1px solid var(--border-color);
         }
 
         .toc ul {
@@ -184,17 +223,19 @@
         }
 
         .toc a {
-            color: var(--primary-color);
+            color: var(--text-color);
             text-decoration: none;
             display: block;
-            padding: 0.2rem 0;
+            padding: 0.4rem 0.75rem;
+            border-radius: 6px;
+            transition: all 0.2s;
         }
 
         .toc a:hover {
-            color: var(--link-color);
+            background: var(--hover-bg);
+            color: var(--primary-color);
         }
 
-        /* Loading indicator */
         #loading-indicator {
             position: fixed;
             top: 0;
@@ -211,10 +252,9 @@
         .loading-content {
             background: var(--bg-color);
             padding: 1.5rem 2rem;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            gap: 1rem;
+            border-radius: 12px;
+            border: 1px solid var(--border-color);
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
         }
 
         /* Responsive design */
@@ -242,21 +282,22 @@
 <body>
     <header>
         <div class="header-content">
-            <a href="index.html" style="display: flex; align-items: center; gap: 10px; text-decoration: none; color: var(--text-color);">
+            <a href="index.html" class="logo-link">
                 <img src="assets/logo.svg" alt="Aether Logo" style="height: 32px;">
-                <span style="font-weight: bold; font-size: 1.25rem;">Aether Docs</span>
+                <span class="logo-text">Aether Docs</span>
             </a>
             <div style="display: flex; align-items: center; gap: 20px;">
-                <button id="theme-toggle" style="background: none; border: none; cursor: pointer; padding: 8px;">
-                    <i class="fas fa-moon" style="color: var(--primary-color);"></i>
+                <button id="theme-toggle">
+                    <i class="fas fa-moon"></i>
                 </button>
-                <a href="index.html" style="text-decoration: none; color: var(--primary-color); font-size: 0.9rem;">Back to Home</a>
+                <a href="index.html" style="text-decoration: none; color: var(--text-color); font-size: 0.95rem; padding: 8px 16px; border-radius: 8px; transition: all 0.2s;">
+                    Back to Home
+                </a>
             </div>
         </div>
     </header>
 
     <div class="container">
-        <!-- Left sidebar -->
         <aside>
             <nav class="doc-nav">
                 <div>
@@ -277,7 +318,6 @@
             </nav>
         </aside>
 
-        <!-- Main content -->
         <main>
             <div class="markdown-body" id="markdown-content"></div>
             <div id="loading-indicator" class="hidden">
