--- a/docu.html
+++ b/docu.html
@@ -52,30 +52,96 @@
         header {
             background: var(--nav-bg);
             border-bottom: 1px solid var(--border-color);
-            padding: 0.75rem;
+            padding: 1rem 2rem;
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 1000;
-            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         .header-content {
-            max-width: 1200px;
+            max-width: 1600px;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0 1rem;
+        }
+
+        .logo-link {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            text-decoration: none;
+            padding: 0.5rem;
+            border-radius: 8px;
+            transition: all 0.2s;
+        }
+
+        .logo-link:hover {
+            background: var(--hover-bg);
+        }
+
+        .logo-text {
+            font-size: 1.5rem;
+            font-weight: 700;
+            background: linear-gradient(135deg, var(--primary-color), #818cf8);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            letter-spacing: -0.5px;
+        }
+
+        .header-actions {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        #theme-toggle {
+            background: var(--bg-color);
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            padding: 0.6rem 1rem;
+            cursor: pointer;
+            color: var(--text-color);
+            transition: all 0.2s;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            font-size: 0.9rem;
+        }
+
+        #theme-toggle:hover {
+            background: var(--hover-bg);
+            transform: translateY(-1px);
+        }
+
+        .back-link {
+            text-decoration: none;
+            color: var(--text-color);
+            font-size: 0.95rem;
+            padding: 0.6rem 1.2rem;
+            border-radius: 8px;
+            transition: all 0.2s;
+            border: 1px solid var(--border-color);
+            background: var(--bg-color);
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .back-link:hover {
+            background: var(--hover-bg);
+            transform: translateY(-1px);
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 1600px;
             margin: 0 auto;
-            padding: 80px 20px 20px;
+            padding: 100px 2rem 2rem;
             display: grid;
-            grid-template-columns: 250px 1fr 250px;
-            gap: 40px;
+            grid-template-columns: 300px 1fr 300px;
+            gap: 2rem;
         }
 
         .doc-nav {
@@ -132,8 +198,8 @@
 
         /* Markdown content styles */
         .markdown-body {
-            max-width: 800px;
-            margin: 0 auto;
+            max-width: none;
+            margin: 0;
             background: var(--bg-color);
             padding: 2rem;
             border-radius: 12px;
@@ -258,23 +324,29 @@
         }
 
         /* Responsive design */
+        @media (max-width: 1400px) {
+            .container {
+                grid-template-columns: 250px 1fr 250px;
+            }
+        }
+
         @media (max-width: 1024px) {
             .container {
                 grid-template-columns: 250px 1fr;
-            }
-
-            aside:last-child {
-                display: none;
+                padding: 100px 1rem 1rem;
             }
         }
 
         @media (max-width: 768px) {
-            .container {
-                grid-template-columns: 1fr;
+            .header-content {
+                flex-direction: column;
+                gap: 1rem;
+                padding: 0.5rem 0;
             }
 
-            aside {
-                display: none;
+            .container {
+                grid-template-columns: 1fr;
+                padding: 140px 1rem 1rem;
             }
         }
     </style>
@@ -283,15 +355,17 @@
     <header>
         <div class="header-content">
             <a href="index.html" class="logo-link">
-                <img src="assets/logo.svg" alt="Aether Logo" style="height: 32px;">
-                <span class="logo-text">Aether Docs</span>
+                <img src="assets/logo.svg" alt="Aether Logo" style="height: 40px; width: 40px;">
+                <span class="logo-text">Aether Documentation</span>
             </a>
-            <div style="display: flex; align-items: center; gap: 20px;">
+            <div class="header-actions">
                 <button id="theme-toggle">
                     <i class="fas fa-moon"></i>
+                    <span class="theme-text">Dark Mode</span>
                 </button>
-                <a href="index.html" style="text-decoration: none; color: var(--text-color); font-size: 0.95rem; padding: 8px 16px; border-radius: 8px; transition: all 0.2s;">
-                    Back to Home
+                <a href="index.html" class="back-link">
+                    <i class="fas fa-arrow-left"></i>
+                    <span>Back to Home</span>
                 </a>
             </div>
         </div>
@@ -346,6 +420,7 @@
         function updateTheme(isDark) {
             body.classList.toggle('dark', isDark);
             icon.className = isDark ? 'fas fa-sun' : 'fas fa-moon';
+            document.querySelector('.theme-text').textContent = isDark ? 'Light Mode' : 'Dark Mode';
             localStorage.setItem('theme', isDark ? 'dark' : 'light');
         }
 
