--- a/docu.html
+++ b/docu.html
@@ -377,13 +377,7 @@
                         <li><a href="#" data-file="README.md">Overview</a></li>
                         <li><a href="#" data-file="getting-started.md">Getting Started</a></li>
                         <li><a href="#" data-file="installation.md">Installation</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h5>Features</h5>
-                    <ul>
-                        <li><a href="#" data-file="ai-assistant.md">AI Assistant</a></li>
-                        <li><a href="#" data-file="customization.md">Customization</a></li>
+                        <li><a href="#" data-file="prequisites.md.md">Prequisites</a></li>
                     </ul>
                 </div>
             </nav>
