--- a/docu.html
+++ b/docu.html
@@ -402,7 +402,7 @@
                         <li><a href="#" data-file="README.md">Overview</a></li>
                         <li><a href="#" data-file="getting-started.md">Getting Started</a></li>
                         <li><a href="#" data-file="installation.md">Installation</a></li>
-                        <li><a href="#" data-file="prequisites.md.md">Prequisites</a></li>
+                        <li><a href="#" data-file="prequisites.md">Prequisites</a></li>
                     </ul>
                 </div>
             </nav>
