--- a/index.html
+++ b/index.html
@@ -233,6 +233,172 @@
             padding: 1rem;
             z-index: 1000;
         }
+
+        .gradient-text {
+            background: linear-gradient(-45deg, #6200ea, #3700b3, #23a6d5, #23d5ab);
+            background-size: 300%;
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            animation: gradient-shift 10s ease infinite;
+        }
+
+        @keyframes gradient-shift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .cursor-blob {
+            background: radial-gradient(
+                circle at center,
+                rgba(98, 0, 234, 0.3) 0%,
+                rgba(55, 0, 179, 0.3) 25%,
+                rgba(35, 166, 213, 0.3) 50%,
+                rgba(35, 213, 171, 0.3) 75%
+            );
+            mix-blend-mode: screen;
+            filter: blur(40px);
+        }
+
+        .modern-card {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 
+                0 4px 6px -1px rgba(0, 0, 0, 0.1),
+                0 2px 4px -1px rgba(0, 0, 0, 0.06),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .modern-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 
+                0 20px 25px -5px rgba(0, 0, 0, 0.1),
+                0 10px 10px -5px rgba(0, 0, 0, 0.04),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+        }
+
+        .neo-button {
+            position: relative;
+            background: linear-gradient(45deg, #6200ea, #3700b3);
+            border: none;
+            color: white;
+            padding: 1rem 2rem;
+            border-radius: 12px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            box-shadow: 
+                0 10px 20px rgba(98, 0, 234, 0.2),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2);
+        }
+
+        .neo-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                120deg,
+                transparent,
+                rgba(255, 255, 255, 0.3),
+                transparent
+            );
+            transition: all 0.6s ease;
+        }
+
+        .neo-button:hover::before {
+            left: 100%;
+        }
+
+        .neo-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 
+                0 15px 30px rgba(98, 0, 234, 0.3),
+                inset 0 1px 0 rgba(255, 255, 255, 0.2);
+        }
+
+        .terminal-3d-inner {
+            background: linear-gradient(
+                145deg,
+                rgba(0, 0, 0, 0.9) 0%,
+                rgba(0, 0, 0, 0.8) 100%
+            );
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 
+                0 20px 40px rgba(0, 0, 0, 0.4),
+                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+        }
+
+        .scroll-progress {
+            height: 4px;
+            background: linear-gradient(90deg, #6200ea, #23d5ab);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 9999;
+            filter: drop-shadow(0 0 10px rgba(98, 0, 234, 0.5));
+        }
+
+        .nav-link {
+            position: relative;
+            padding: 0.5rem 1rem;
+            transition: all 0.3s ease;
+        }
+
+        .nav-link::after {
+            content: '';
+            position: absolute;
+            bottom: -2px;
+            left: 50%;
+            width: 0;
+            height: 2px;
+            background: linear-gradient(90deg, #6200ea, #23d5ab);
+            transition: all 0.3s ease;
+            transform: translateX(-50%);
+        }
+
+        .nav-link:hover::after {
+            width: 100%;
+        }
+
+        .advanced-particle {
+            position: absolute;
+            border-radius: 50%;
+            pointer-events: none;
+            mix-blend-mode: screen;
+            animation: float-particle 3s ease-in-out infinite;
+        }
+
+        @keyframes float-particle {
+            0%, 100% {
+                transform: translateY(0) rotate(0deg);
+            }
+            50% {
+                transform: translateY(-20px) rotate(180deg);
+            }
+        }
+
+        .neo-input {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 8px;
+            padding: 1rem;
+            color: white;
+            transition: all 0.3s ease;
+        }
+
+        .neo-input:focus {
+            background: rgba(255, 255, 255, 0.1);
+            border-color: rgba(98, 0, 234, 0.5);
+            box-shadow: 0 0 20px rgba(98, 0, 234, 0.2);
+            outline: none;
+        }
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-white">
