--- a/index.html
+++ b/index.html
@@ -399,10 +399,201 @@
             box-shadow: 0 0 20px rgba(98, 0, 234, 0.2);
             outline: none;
         }
+
+        .text-3d {
+            text-shadow: 
+                0 1px 0 #ccc,
+                0 2px 0 #c9c9c9,
+                0 3px 0 #bbb,
+                0 4px 0 #b9b9b9,
+                0 5px 0 #aaa,
+                0 6px 1px rgba(0,0,0,.1),
+                0 0 5px rgba(0,0,0,.1),
+                0 1px 3px rgba(0,0,0,.3),
+                0 3px 5px rgba(0,0,0,.2),
+                0 5px 10px rgba(0,0,0,.25),
+                0 10px 10px rgba(0,0,0,.2),
+                0 20px 20px rgba(0,0,0,.15);
+        }
+
+        .neon-text {
+            text-shadow:
+                0 0 7px #fff,
+                0 0 10px #fff,
+                0 0 21px #fff,
+                0 0 42px #6200ea,
+                0 0 82px #6200ea,
+                0 0 92px #6200ea,
+                0 0 102px #6200ea,
+                0 0 151px #6200ea;
+            animation: neon-flicker 1.5s infinite alternate;
+        }
+
+        @keyframes neon-flicker {
+            0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+                text-shadow:
+                    0 0 7px #fff,
+                    0 0 10px #fff,
+                    0 0 21px #fff,
+                    0 0 42px #6200ea,
+                    0 0 82px #6200ea,
+                    0 0 92px #6200ea,
+                    0 0 102px #6200ea,
+                    0 0 151px #6200ea;
+            }
+            20%, 24%, 55% {
+                text-shadow: none;
+            }
+        }
+
+        .glass-card {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 
+                0 8px 32px 0 rgba(31, 38, 135, 0.37),
+                inset 0 0 0 1px rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            padding: 2rem;
+            transition: all 0.3s ease;
+        }
+
+        .glass-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 
+                0 15px 45px 0 rgba(31, 38, 135, 0.47),
+                inset 0 0 0 2px rgba(255, 255, 255, 0.2);
+        }
+
+        .animated-border {
+            position: relative;
+            border-radius: 20px;
+            overflow: hidden;
+        }
+
+        .animated-border::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: conic-gradient(
+                from 0deg,
+                transparent 0%,
+                #6200ea 25%,
+                transparent 25%
+            );
+            animation: rotate-border 4s linear infinite;
+        }
+
+        @keyframes rotate-border {
+            100% { transform: rotate(360deg); }
+        }
+
+        .modern-button {
+            position: relative;
+            background: linear-gradient(45deg, #6200ea, #3700b3);
+            border: none;
+            padding: 1rem 3rem;
+            color: white;
+            border-radius: 15px;
+            font-weight: 600;
+            letter-spacing: 1px;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            z-index: 1;
+        }
+
+        .modern-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, #3700b3, #6200ea);
+            z-index: -1;
+            transition: opacity 0.3s ease;
+            opacity: 0;
+        }
+
+        .modern-button:hover::before {
+            opacity: 1;
+        }
+
+        .floating {
+            animation: floating 3s ease-in-out infinite;
+        }
+
+        @keyframes floating {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
+            100% { transform: translateY(0px); }
+        }
+
+        .gradient-bg {
+            background: linear-gradient(
+                45deg,
+                #6200ea,
+                #3700b3,
+                #23a6d5,
+                #23d5ab,
+                #6200ea
+            );
+            background-size: 400% 400%;
+            animation: gradient-shift 15s ease infinite;
+        }
+
+        @keyframes gradient-shift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .scroll-progress {
+            height: 5px;
+            background: linear-gradient(90deg, #6200ea, #23d5ab);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 9999;
+            filter: drop-shadow(0 0 10px rgba(98, 0, 234, 0.5));
+        }
+
+        .modern-nav {
+            backdrop-filter: blur(10px);
+            background: rgba(0, 0, 0, 0.5);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .nav-link {
+            position: relative;
+            padding: 0.5rem 1rem;
+            transition: all 0.3s ease;
+        }
+
+        .nav-link::before {
+            content: '';
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(90deg, #6200ea, #23d5ab);
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: transform 0.3s ease;
+        }
+
+        .nav-link:hover::before {
+            transform: scaleX(1);
+            transform-origin: left;
+        }
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-white">
-    <header class="bg-gradient-to-r from-primary to-secondary text-white fixed w-full z-50 transition-all duration-300" id="header">
+    <header class="modern-nav fixed w-full z-50 transition-all duration-300" id="header">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <img src="assets/logo.svg" alt="Aetherapp Logo" class="h-8 w-8">
@@ -443,7 +634,7 @@
             <div id="particles" class="absolute inset-0"></div>
             <div class="container mx-auto px-6 text-center relative z-10">
                 <div class="max-w-4xl mx-auto">
-                    <h1 class="text-5xl md:text-7xl font-bold mb-6 glitch tracking-tight">
+                    <h1 class="text-5xl md:text-7xl font-bold mb-6 neon-text tracking-tight">
                         The Next-Gen Terminal Experience
                     </h1>
                     <p class="text-xl md:text-2xl mb-12 text-white/90">
@@ -451,7 +642,7 @@
                     </p>
                     <div class="flex flex-col sm:flex-row justify-center gap-4 mb-12">
                         <a href="/downloads/aether_terminal.exe" download 
-                           class="download-button hover-glow glass-morph bg-white/10 text-white px-8 py-4 rounded-xl font-bold text-lg transition-all transform hover:scale-105 flex items-center justify-center space-x-2 shadow-lg">
+                           class="modern-button animated-border floating">
                             <i class="fas fa-download"></i>
                             <span>Download for Windows</span>
                         </a>
@@ -469,7 +660,7 @@
             
             
             <div class="terminal-preview mt-12 max-w-4xl mx-auto px-6">
-                <div class="terminal-3d">
+                <div class="terminal-3d glass-card">
                     <div class="terminal-3d-inner rounded-xl overflow-hidden">
                         <div class="flex justify-between items-center px-4 py-3 bg-gray-800/50 backdrop-blur-sm border-b border-white/10">
                             <div class="flex items-center space-x-2">
